# django-nativeshortuuidfield

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev-requirements.txt  githook-pre-commit-isort  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: linters.yml  python-publish.yml  tests.yml
native_shortuuid/: __init__.py  admin.py  apps.py  fields.py  validation.py
native_shortuuid/templates/admin/: custom_change_list.html
native_shortuuid/templates/admin/native_shortuuid/: native_shortuuid_search_form.html
native_shortuuid/templatetags/: native_shortuuid_tags.py
tests/: models.py  test_settings.py  test_shortuuid_field.py
