[project]
name = "django-nativeshortuuidfield"
version = "1.4.11"
description = "A decoder/encoder Field for uuid"
readme = "README.md"
authors = [
    { name = "Laith Abu Zainih", email = "systems@foundertherapy.co" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.1",
    "djangorestframework>=3.13.1",
    "django-shortuuidfield",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["shortuuid", "uuid", "nativeshortuuid"]

[project.urls]
Homepage = "https://github.com/foundertherapy/django-nativeshortuuidfield"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["native_shortuuid"]

[tool.hatch.envs.default]
dependencies = [
    "django",
    "djangorestframework",
    "shortuuid",
    "isort",
    "flake8",
]

[tool.hatch.envs.default.scripts]
test = "python runtests.py"
lint = "flake8"
format = "isort native_shortuuid tests"
format-check = "isort --check --diff native_shortuuid tests"
package = "hatch build"
